19911
The error message produced by a tuple literal of a size > 22 in Scala 2.11+ is not very useful:

{quote}
Welcome to Scala 2.12.0-20151127-104857-5ad0cca2a9 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_60).
Type in expressions for evaluation. Or try :help.

scala> def x = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23)
<console>:11: error: object <none> is not a member of package scala
       def x = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23)
               ^
{quote}

In 2.10 it used to be "object Tuple23 is not a member of package scala".
